rechenoperationen beim einteiler funktionieren noch nicht