@@ -27,6 +27,10 @@ public class Rollercoaster {
 
     public static final Einteiler einteiler1 = new Einteiler(singleRiderSchlange, multiRiderSchlange, zug, sim1,featureEventList);
 
+    public static GUI getGui() {
+        return gui;
+    }
+
     public static void main(String[] args) {
 
         gui = new GUI();
@@ -37,9 +41,6 @@ public class Rollercoaster {
             int ran = r.nextInt(max - min) + min;
             personList.add(new PersonenGruppe(ran));
             featureEventList.add();
-
-           // Object[] pers = new Object["","",""];
-
 
             gui.getSecond().addColumn(new String[]{Integer.toString(personList.get(i).getGroupSize()),
                                                    Integer.toString(featureEventList.getArrivaltime().get(i)),
@@ -57,24 +58,63 @@ public class Rollercoaster {
                 for (int i = 0; i < personList.size(); i++) {
                     if (multiRiderSchlange.getWartelaenge() <= 100) {
                         try {
-                            gui.getFirst().addColumn(new String []{Integer.toString(featureEventList.getArrivaltime().get(0)),
-                                    "-",
-                                    "-",
-                                    "-",
-                                    zug.getStatus(),
-                                    Integer.toString(zug.getAktiv()),
-                                    Integer.toString(zug.getTakenSeats()[zug.getAktiv()]),
-                                    Integer.toString(multiRiderSchlange.getWartelaenge()),
-                                    Integer.toString(singleRiderSchlange.getWartelaenge()),
-                                    Long.toString(sim1.getSimZeit())});
 
-                            Thread.sleep((featureEventList.getArrivaltime().get(0)));
-                            featureEventList.removeArrival();
-                            multiRiderSchlange.addPersons(personList.get(i));
-                            //          System.out.println(multiRiderSchlange.toString());
+                            if (i == 0) {
+
+
+                                gui.getFirst().addColumn(new String[]{Integer.toString(
+                                        featureEventList.getArrivaltime().get(0)),
+                                        "-",
+                                        "-",
+                                        "-",
+                                        zug.getStatus(),
+                                        Integer.toString(zug.getAktiv()),
+                                        Integer.toString(zug.getTakenSeats()[zug.getAktiv()]),
+                                        Integer.toString(multiRiderSchlange.getWartelaenge()),
+                                        Integer.toString(singleRiderSchlange.getWartelaenge()),
+                                        Long.toString(sim1.getSimZeit())});
+
+                                System.out.println(featureEventList.getArrivaltime().get(0));
+                                SimulationsZeit.setSimZeit(featureEventList.getArrivaltime().get(0));
+                                Thread.sleep((featureEventList.getArrivaltime().get(0)));
+                                featureEventList.removeArrival();
+                                multiRiderSchlange.addPersons(personList.get(i));
+                                //          System.out.println(multiRiderSchlange.toString());
+
+                            }else {
+
+                                int aktivWagon = 0;
+
+                                if (zug.getAktiv() > zug.getWaggons()-1){
+                                    aktivWagon = zug.getWaggons()-1;
+                                }else{
+                                    aktivWagon = zug.getAktiv();
+                                }
+
+
+                                gui.getFirst().addColumn(new String[]{
+                                        Integer.toString(featureEventList.getArrivaltime().get(0)+ (int)sim1.getSimZeit()),
+                                        Integer.toString(featureEventList.getEntrytime().get(0)+ (int)sim1.getSimZeit()),
+                                        "-",
+                                        "-",
+                                        zug.getStatus(),
+                                        Integer.toString(zug.getAktiv()),
+                                        Integer.toString(zug.getTakenSeats()[aktivWagon]),
+                                        Integer.toString(multiRiderSchlange.getWartelaenge()),
+                                        Integer.toString(singleRiderSchlange.getWartelaenge()),
+                                        Long.toString(sim1.getSimZeit())});
+
+                                Thread.sleep((featureEventList.getArrivaltime().get(0)));
+                                SimulationsZeit.setSimZeit(sim1.getSimZeit()+featureEventList.getArrivaltime().get(0));
+                                featureEventList.removeArrival();
+                                multiRiderSchlange.addPersons(personList.get(i));
+
+                            }
+
                         } catch (InterruptedException e) {
                             e.printStackTrace();
                         }
+
                     }else{
                         if (personList.get(i).getGroupSize() == 1){
                             try {
